--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ section
 {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-top: 100px;
     margin-bottom: 100px;
 }
@@ -113,8 +113,8 @@ article
 {
     display: flex;
     align-items:center;
-    width: 735px;
-    height: 959px;
+    width: 535px;
+    height: 759px;
 }
 #note 
 {   
@@ -392,6 +392,7 @@ aside:hover #apres
 /* ---------------------------------------------------------------------------------
     Programmation  en responsive 
 ------------------------------------------------------------------------------------*/
+
 
 @media all and (min-device-width: 890px) and (max-device-width: 1236px)
 {
