--- a/chic/style_chic.css
+++ b/chic/style_chic.css
@@ -97,6 +97,8 @@ h1 {
 
 h2
 {
+    display: flex;
+    justify-content: center;
     padding-top: 120px;
     width: 700px;
     height: 100px;
@@ -217,6 +219,8 @@ footer {
 
 span
 {
+    font-size: 26px;
+    font-family: 'montserrat', Impact, Helvetica, serif ;
     color: #FDCB46;
 }
 
