--- a/palette/style_palette.css
+++ b/palette/style_palette.css
@@ -65,7 +65,7 @@ h1 {
 /*Fin de mise en page header------------------------------------------------------*/
 
 
-section
+#bloc_page
 {
     display:flex;
     flex-direction:column; 
@@ -77,21 +77,29 @@ section
     font-family:'caveatregular', Impact, Helvetica, serif ;
 
 }
+#palette
+{
+    background-color: #FDFFFD;  
+}
 /*Mise en page section menu ------------------------------------------------------*/
 
 #menu {
     margin-top: 80px;
  }
 
-#palette { 
-    display: flex;
-    justify-content: center;
-    font-size: 45px;
-    text-align: center;
-    background-color: #FDFFFD;
-}
+ .prix
+ {
+     display:flex;
+     flex-direction: row;
+     justify-content: space-between;
+     margin-left: 100px;
+     margin-right: 100px;
+ }
+
 h2
 {
+    display: flex;
+    justify-content: center;
     padding-top: 120px;
     width: 700px;
     height: 120px;
@@ -103,17 +111,7 @@ h2
 }
 p
 {
-    line-height: 55px;
-    margin: 0px;    
-}
-#entrée, #plats, #dessert
-{
-    display:flex;
-    justify-content: space-between;
-    font-size: 30px;
-    margin:60px 100px 60px 100px;  
-    border: 1px solid black;
-
+    font-size: 30px;    
 }
 
 h3:hover
@@ -127,14 +125,6 @@ h3
     font-size: 40px;
 }
 
-.tarifs
-{
-    font-size: 34px;
-    width: 20%;
-    border: black 1px solid;  
-    text-align: right;
-    padding-right: 5px;
-}
 /* Partie insérer un text au milieur d'un trait-------------------------------------------*/
 .hr 
 {
@@ -185,6 +175,8 @@ footer {
 
 span
 {
+    font-size: 26px;
+    font-family: 'montserrat', Impact, Helvetica, serif ;
     color: #FDCB46;
 }
 
