finalisation du responsive

--- a/chic/style_chic.css
+++ b/chic/style_chic.css
@@ -5,6 +5,10 @@ Réalisé par Nicolas CHANTEPIE
 */
 /*Début de programmation*/
 
+
+
+
+
 /*Déclaration des polices-----------------------------------------------------------*/
 @font-face {
     font-family: 'crimson';
@@ -77,7 +81,7 @@ h1 {
 
 #menu
 {
-    margin-top: 80px;
+    margin-top: 20px;  
 }
 
 .prix
@@ -98,8 +102,7 @@ h1 {
 h2
 {
     display: flex;
-    justify-content: center;
-    padding-top: 120px;
+    justify-content: center;  
     width: 700px;
     height: 100px;
     font-size: 65px;
@@ -111,8 +114,7 @@ h2
 }
 
 p
-{
-   border: 1px solid black;  
+{ 
    font-size: 30px;
 }
 
@@ -252,17 +254,37 @@ a:link
     -webkit-animation-iteration-count: infinite ;
 }
 
+@media all  and (min-device-width: 768px)and (max-device-width: 1024px) 
+{
+    #bloc_page
+    {
+        width: 99%;
+    }
+    .prix, #dessert
+    {
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+    #menu p
+    {
+        margin-top: 0px;
+    }
+}
+
 @media all and (max-device-width: 767px) 
 {
-    #entrée, #plats, #dessert
+   
+    #bloc_page
     {
-    
-        font-size: auto;  
+        width: 99%;
     }
-
-    .tarifs
+    .prix, #dessert
     {
-        line-height: 70px;
+        margin-left: 30px;
+        margin-right: 30px;
     }
- 
+    #menu p
+    {
+        margin-top: 0px;
+    }
 }
