--- a/delice/style_delice.css
+++ b/delice/style_delice.css
@@ -85,7 +85,7 @@ h1 {
 /*Mise en page section menu ------------------------------------------------------*/
 
 #menu{
-    margin-top: 80px;
+    margin-top: 20px;
  }
 
  .prix
@@ -101,7 +101,6 @@ h2
 {
     display: flex;
     justify-content: center;
-    margin-top: 150px;
     width: 700px;
     height: 100px;
     font-size: 70px;
@@ -229,4 +228,50 @@ a:link
     -webkit-animation-name:shake;
     -webkit-animation-duration: 0.8s;
     -webkit-animation-iteration-count: infinite ;
+}
+
+
+
+/* ---------------------------------------------------------------------------------
+    Programmation  en responsive 
+------------------------------------------------------------------------------------*/
+
+
+@media all  and (min-device-width: 768px)and (max-device-width: 1024px) 
+{
+    #bloc_page
+    {
+        width: 99%;
+    }
+
+    .prix p
+    {
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    #menu
+    {
+    margin-bottom: 50px;
+    }
+   
+}
+
+@media all and (max-device-width: 767px) 
+{
+   
+    #bloc_page
+    {
+        width: 99%;
+    }
+   
+    .prix p
+    {
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    #menu
+    {
+    margin-bottom: 50px;
+    }
 }
