--- a/note/style_note.css
+++ b/note/style_note.css
@@ -83,7 +83,7 @@ h1 {
 
 #menu
  {
-    margin-top: 60px;
+    margin-top: 20px;
  }
 
  .prix
@@ -241,3 +241,45 @@ a:link
 }
 
 
+@media all  and (min-device-width: 768px)and (max-device-width: 1024px) 
+{
+    #bloc_page
+    {
+        width: 99%;
+    }
+
+    .prix, #mouvement_final
+    {
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+
+    #menu p
+    {
+        margin-top: 0px;
+        font-size: 28px;
+    }
+}
+
+@media all and (max-device-width: 767px) 
+{
+   
+    #bloc_page
+    {
+        width: 99%;
+    }
+
+    .prix, #mouvement_final
+    {
+        margin-left: 30px;
+        margin-right: 30px;
+
+    }
+
+    #menu p
+    {
+        margin-top: 0px;
+        font-size: 28px; 
+    }
+
+}
