--- a/chic/style_chic.css
+++ b/chic/style_chic.css
@@ -53,6 +53,16 @@ header {
     background:#579C87; 
 
 }
+.far
+{
+    display: block;
+    position: absolute;
+    left: 50px;
+    top: 50px;
+    font-size: 45px;
+    color: #FDCB46;
+    float: left;
+}
 
 h1 {
     color: #FDCB46;
