--- a/chic/style_chic.css
+++ b/chic/style_chic.css
@@ -113,13 +113,13 @@ h2
 {
     display: flex;
     justify-content: center;  
-    width: 700px;
-    height: 100px;
+   
     font-size: 65px;
     font-family: 'kurale', Impact, Helvetica,serif ;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-image: -webkit-linear-gradient(left, #DB8528, #8F5BFE);
+    border: 1px solid black;
 
 }
 
@@ -297,4 +297,5 @@ a:link
     {
         margin-top: 0px;
     }
+    h2
 }
