--- a/chic/style_chic.css
+++ b/chic/style_chic.css
@@ -113,7 +113,8 @@ h2
 {
     display: flex;
     justify-content: center;  
-   
+    width: 700px;
+    height: 100px;
     font-size: 65px;
     font-family: 'kurale', Impact, Helvetica,serif ;
     -webkit-background-clip: text;
@@ -279,6 +280,11 @@ a:link
     {
         margin-top: 0px;
     }
+    h2
+    {
+        font-size: 30px;
+        border: none;
+    }
 }
 
 @media all and (max-device-width: 767px) 
@@ -298,4 +304,8 @@ a:link
         margin-top: 0px;
     }
     h2
+    {
+        font-size: 30px;
+        border:none;
+    }
 }
