--- a/chic/style_chic.css
+++ b/chic/style_chic.css
@@ -86,6 +86,7 @@ h1 {
 #chic 
 {
     background-color:  #FFF5FE;
+    border: 1px solid black;
 }
 /*Mise en page section menu ------------------------------------------------------*/
 
@@ -114,8 +115,8 @@ h2
     display: flex;
     justify-content: center;  
     width: 700px;
-    height: 100px;
-    font-size: 65px;
+    height: 100px;/*
+    font-size: 65px;*/
     font-family: 'kurale', Impact, Helvetica,serif ;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -282,8 +283,9 @@ a:link
     }
     h2
     {
-        font-size: 30px;
-        border: none;
+        -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-image: -webkit-linear-gradient(left, #DB8528, #8F5BFE);
     }
 }
 
@@ -305,7 +307,9 @@ a:link
     }
     h2
     {
-        font-size: 30px;
-        border:none;
+        -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-image: -webkit-linear-gradient(left, #DB8528, #8F5BFE);
     }
-}
+} 
+
