--- a/chic/style_chic.css
+++ b/chic/style_chic.css
@@ -102,12 +102,14 @@ h1 {
     justify-content: space-between;
     margin-left: 100px;
     margin-right: 100px;
+    font-size: 30px;
 }
 
 #dessert
 {
     margin-left: 100px;
     margin-right: 100px;
+    font-size: 30px;
 }
 
 h2
@@ -115,19 +117,14 @@ h2
     display: flex;
     justify-content: center;  
     width: 700px;
-    height: 100px;/*
-    font-size: 65px;*/
+    height: 100px;
+    font-size: 65px;
     font-family: 'kurale', Impact, Helvetica,serif ;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-image: -webkit-linear-gradient(left, #DB8528, #8F5BFE);
     border: 1px solid black;
 
-}
-
-p
-{ 
-   font-size: 30px;
 }
 
 #hr_appetit, #entrée
@@ -281,12 +278,7 @@ a:link
     {
         margin-top: 0px;
     }
-    h2
-    {
-        -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-image: -webkit-linear-gradient(left, #DB8528, #8F5BFE);
-    }
+   
 }
 
 @media all and (max-device-width: 767px) 
@@ -300,16 +292,20 @@ a:link
     {
         margin-left: 30px;
         margin-right: 30px;
+        font-size: 34px;
     }
     #menu p
     {
         margin-top: 0px;
     }
-    h2
+    .tarif
     {
-        -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-image: -webkit-linear-gradient(left, #DB8528, #8F5BFE);
+        width: 20%;
+        text-align: end;
+        border: solid black 1px;
     }
+
+    
+    
 } 
 
