--- a/delice/style_delice.css
+++ b/delice/style_delice.css
@@ -107,6 +107,7 @@ h1 {
      justify-content: space-between;
      margin-left: 100px;
      margin-right: 100px;
+     font-size: 30px;  
  }
 
 h2
@@ -121,11 +122,6 @@ h2
     -webkit-text-fill-color: transparent;
     background-image: -webkit-linear-gradient(left, #0228DD , #0889FB);
 }
-p
-{
-    font-size: 30px;    
-}
-
 
 h3:hover
 {
@@ -281,9 +277,16 @@ a:link
     {
         margin-top: 10px;
         margin-bottom: 10px;
+        font-size: 34px;
     }
     #menu
     {
     margin-bottom: 50px;
+    }
+    .tarif
+    {
+        width: 20%;
+        text-align: end;
+        border: solid black 1px;
     }
 }
