--- a/note/style_note.css
+++ b/note/style_note.css
@@ -284,6 +284,7 @@ a:link
     {
         margin-left: 30px;
         margin-right: 30px;
+        font-size: 34px;
 
     }
 
@@ -291,6 +292,12 @@ a:link
     {
         margin-top: 0px;
         font-size: 28px; 
+    }
+    .tarif
+    {
+        width: 20%;
+        text-align: end;
+        border: solid black 1px;
     }
 
 }
