--- a/palette/style_palette.css
+++ b/palette/style_palette.css
@@ -106,6 +106,7 @@ h1 {
      justify-content: space-between;
      margin-left: 100px;
      margin-right: 100px;
+     font-size: 30px;  
  }
 
 h2
@@ -119,10 +120,6 @@ h2
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-image: -webkit-linear-gradient(left, #3D923A, #BEFF7F);
-}
-p
-{
-    font-size: 30px;    
 }
 
 h3:hover
@@ -256,9 +253,16 @@ a:link
     {
         margin-top: 10px;
         margin-bottom: 10px;
+        font-size: 34px;
     }
     #menu
     {
     margin-bottom: 50px;
+    }
+    .tarif
+    {
+        width: 20%;
+        text-align: end;
+        border: solid black 1px;
     }
 }
