--- a/note/style_note.css
+++ b/note/style_note.css
@@ -177,6 +177,7 @@ h3
 .fas{
 
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     background-image: -webkit-linear-gradient(left, #F15F62, #F6916A);
 
@@ -247,12 +248,16 @@ a:link
 .wiggle :hover
 {
     -webkit-animation-name:shake;
+    animation-name:shake;
     -webkit-animation-duration: 0.8s;
+    animation-duration: 0.8s;
     -webkit-animation-iteration-count: infinite ;
+    animation-iteration-count: infinite ;
+}
 }
 
 
-@media all  and (min-device-width: 768px)and (max-device-width: 1024px) 
+@media all  and (min-width: 768px)and (max-width: 1024px) 
 {
     #bloc_page
     {
@@ -272,7 +277,7 @@ a:link
     }
 }
 
-@media all and (max-device-width: 767px) 
+@media all and (max-width: 767px) 
 {
    
     #bloc_page
