--- a/chic/style_chic.css
+++ b/chic/style_chic.css
@@ -120,6 +120,7 @@ h2
     font-size: 65px;
     font-family: 'kurale', Impact, Helvetica,serif ;
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     background-image: -webkit-linear-gradient(left, #DB8528, #8F5BFE);
 }
@@ -256,11 +257,14 @@ a:link
 .wiggle :hover
 {
     -webkit-animation-name:shake;
+    animation-name:shake;
     -webkit-animation-duration: 0.8s;
+    animation-duration: 0.8s;
     -webkit-animation-iteration-count: infinite ;
+    animation-iteration-count: infinite ;
 }
 
-@media all  and (min-device-width: 768px)and (max-device-width: 1024px) 
+@media all  and (min-width: 768px)and (max-width: 1024px) 
 {
     #bloc_page
     {
@@ -278,7 +282,7 @@ a:link
    
 }
 
-@media all and (max-device-width: 767px) 
+@media all and (max-width: 767px) 
 {
    
     #bloc_page
