--- a/palette/style_palette.css
+++ b/palette/style_palette.css
@@ -118,6 +118,7 @@ h2
     font-size: 80px;
     font-family: 'kaushanscript', Impact, Helvetica,serif ;
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     background-image: -webkit-linear-gradient(left, #3D923A, #BEFF7F);
 }
@@ -213,15 +214,19 @@ a:link
 .wiggle :hover
 {
     -webkit-animation-name:shake;
+    animation-name:shake;
     -webkit-animation-duration: 0.8s;
+    animation-duration: 0.8s;
     -webkit-animation-iteration-count: infinite ;
+    animation-iteration-count: infinite ;
+}
 }
 /* ---------------------------------------------------------------------------------
     Programmation  en responsive 
 ------------------------------------------------------------------------------------*/
 
 
-@media all  and (min-device-width: 768px)and (max-device-width: 1024px) 
+@media all  and (min-width: 768px)and (max-width: 1024px) 
 {
     #bloc_page
     {
@@ -241,7 +246,7 @@ a:link
  
 }
 
-@media all and (max-device-width: 767px) 
+@media all and (max-width: 767px) 
 {
    
     #bloc_page
